- User token email

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        {% include '_partials/_flash.html.twig' %}
 
         {% for type, flashMessages in app.flashes %}
             {% for message in flashMessages %}
