--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,8 +38,8 @@
                     </div>
                 #}
 
-                <button class="btn btn-lg btn-primary mt-3" type="submit">Me connecter</button>
-                <a href="{{ path('app_register') }}" class="btn btn-secondary mt-3">M'inscrire</a>
+                <button class="btn btn-lg btn-primary mt-3" type="submit">Me connecter</button><br>
+                <a href="{{ path('app_register') }}" class="btn btn-secondary mt-3">M'inscrire</a><br>
                 <a href="{{ path('forgotten_password') }}" class="btn btn-secondary mt-3">Mot de passe oublié</a>
 
             </form>
