--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}ArtBill - Tableau de bord{% endblock %}
 
-{% block body %}
-    Page d'accueil
-{% endblock %}
+{% block body %}{% endblock %}
