--- a/templates/customer/show.html.twig
+++ b/templates/customer/show.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Client {{ customer.name }}</h1>
 
-    {{ customer.address }} <br>
     {{ customer.email }} <br>
+    {{ customer.street }} {{ customer.city }} {{ customer.getZipCode() }} {{ customer.country }} <br>
+    <a href="{{ path('customer_update', {'id': customer.id}) }}" class="btn btn-primary">Modifier</a> <br>
 {% endblock %}
