--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,16 @@
         {% block body %}{% endblock %}
         {% include '_partials/_flash.html.twig' %}
 
-        {% for type, flashMessages in app.flashes %}
-            {% for message in flashMessages %}
-                {{ type }} - {{ message }}
-            {% endfor %}
+        {% for flashMessage in app.flashes('success') %}
+            <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+
+        {% for flashMessage in app.flashes('danger') %}
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4">
+                {{ flashMessage }}
+            </div>
         {% endfor %}
     </body>
 </html>
