--- a/templates/back/service/new.html.twig
+++ b/templates/back/service/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('service/_form.html.twig') }}
 
-    <a href="{{ path('app_service_index') }}">back to list</a>
+    <a href="{{ path('back_app_service_index') }}">back to list</a>
 {% endblock %}
