--- a/templates/emails/register.html.twig
+++ b/templates/emails/register.html.twig
@@ -1,5 +1,5 @@
 <h1>Activez votre compte</h1>
 <p>Bonjour {{ user.firstname }},</p>
 <p>Votre inscription sur le site e-commerce est à valider en cliquant sur le lien ci-dessous :</p>
-<p><a href="{{ absolute_url(path('verify_user', {token: token})) }}">{{ absolute_url(path('verify_user', {token: token})) }}</a></p>
+<p><a href="{{ absolute_url(path('verify_user', {token: token})) }}">Verifier ici</a></p>
 <p>Ce lien expirera dans 3 heures</p>
