--- a/templates/front/post/index.html.twig
+++ b/templates/front/post/index.html.twig
@@ -12,9 +12,7 @@
             {% endblock %}
             {% block body %}
                 <em>Créé le {{ post.createdAt|date('d/m/y à H:i') }}</em> <br>
-                <a href="{{ path('post_show', {'id': post.id}) }}">Voir</a> <br>
-                <a href="{{ path('post_update', {'id': post.id}) }}">Modifier</a> <br>
-                <a href="{{ path('post_delete', {'id': post.id, 'token': csrf_token('delete' ~ post.id)}) }}" onclick="confirm('Sur sur ?');">Suppression</a> <br>
+                <a href="{{ path('front_post_show', {'id': post.id}) }}">Voir</a> <br>
             {% endblock %}
         {% endembed %}
     {% else%}
