add js to add service

--- a/templates/_partials/_flash.html.twig
+++ b/templates/_partials/_flash.html.twig
@@ -1,5 +1,5 @@
 {% if app.user and app.user.isVerified() == false %}
-    <div class="alert alert-warning" role="alert">
+    <div class="alert alert-warning block mt-5" role="alert">
         {# <h4 class="alert-heading">Attention  {{user.firstname}} !</h4> #}
         <p>Votre compte n'est pas encore vérifié, vous ne pouvez pas encore accéder à toutes les fonctionnalités du site.</p>
         <hr>
