add ajout et suprresion des services

--- a/templates/quotation/_form.html.twig
+++ b/templates/quotation/_form.html.twig
@@ -23,22 +23,16 @@
 </div>
 
 {# the data-index attribute is required for the JavaScript code below #}
-<ul class='services bg-red-500' data-index="{{ form.services|length > 0 ? form.services|last.vars.label + 1 : 0 }}" data-prototype=" {{ form_widget(form.services.vars.prototype)|e('html_attr') }} ">
-	kk
+<ul class='services bg-green-400' data-index="{{ form.services|length > 0 ? form.services|last.vars.name + 1 : 0 }}" data-prototype=" {{ form_widget(form.services.vars.prototype)|e('html_attr') }} ">
+	Services
+
 	{% for service in form.services %}
-
-		{{ form_label(services.label) }}
-		{{ form_widget(services.label) }}
-		{{ form_errors(services.label) }}
-
-
-		{{ form_row(services.description) }}
-		{{ form_row(services.price) }}
-		{{ form_row(services.vat_rate) }}
-		{{ form_row(services.category) }}
+		<li>
+			{{ form_row(service) }}
+		</li>
 	{% endfor %}
-
-	<button type="button" class="add_item_link" data-collection-holder-class="services">Add a tag</button>
+	<button type="button" class="add_item_link" data-collection-holder-class="services">Ajouter un nouveau service
+	</button>
 </ul>
 
 
@@ -47,22 +41,42 @@
 </div>
 {{ form_end(form) }}
 
+
 {% block javascripts %}
 	<script>
-		const addFormToCollection = (e) => {
+		const addServiceFormDeleteLink = (item) => {
+const removeFormButton = document.createElement('button');
+removeFormButton.innerText = 'Supprimer ce service';
+
+item.append(removeFormButton);
+
+removeFormButton.addEventListener('click', (e) => {
+e.preventDefault();
+// remove the li for the tag form
+item.remove();
+});
+}
+
+const addFormToCollection = (e) => {
 const collectionHolder = document.querySelector('.' + e.currentTarget.dataset.collectionHolderClass);
 
 const item = document.createElement('li');
 
 item.innerHTML = collectionHolder.dataset.prototype.replace(/__name__/g, collectionHolder.dataset.index);
 
-collectionHolder.appendChild(item);
+collectionHolder.insertBefore(item, collectionHolder.lastElementChild);
 
 collectionHolder.dataset.index ++;
-};
-document.querySelectorAll('.add_item_link').forEach(btn => {
-btn.addEventListener("click", addFormToCollection)
-});
-	</script>
 
+addServiceFormDeleteLink(item);
+}
+
+document.querySelectorAll('.add_item_link').forEach(btn => {
+btn.addEventListener("click", addFormToCollection);
+});
+
+document.querySelectorAll('ul.services li').forEach((service) => {
+addServiceFormDeleteLink(service)
+})
+	</script>
 {% endblock %}
