--- a/templates/quotation/_form.html.twig
+++ b/templates/quotation/_form.html.twig
@@ -23,7 +23,7 @@
 </div>
 
 {# the data-index attribute is required for the JavaScript code below #}
-<ul class='services bg-green-400' data-index="{{ form.services|length > 0 ? form.services|last.vars.name + 1 : 0 }}" data-prototype=" {{ form_widget(form.services.vars.prototype)|e('html_attr') }} ">
+<ul class='services' data-index="{{ form.services|length > 0 ? form.services|last.vars.name + 1 : 0 }}" data-prototype=" {{ form_widget(form.services.vars.prototype)|e('html_attr') }} ">
 	{{ form_row(form.services) }}
 
 	<button type="button" class="add_item_link" data-collection-holder-class="services">Ajouter un nouveau service
@@ -57,6 +57,7 @@ const collectionHolder = document.querySelector('.' + e.currentTarget.dataset.co
 
 const item = document.createElement('li');
 
+item.classList.add('bg-red-400');
 item.innerHTML = collectionHolder.dataset.prototype.replace(/__name__/g, collectionHolder.dataset.index);
 
 collectionHolder.insertBefore(item, collectionHolder.lastElementChild);
