gestion de l'historique des quotations

--- a/templates/back/customer/show.html.twig
+++ b/templates/back/customer/show.html.twig
@@ -10,8 +10,8 @@
         <p class="mb-4">{{ customer.street }}, {{ customer.city }}, {{ customer.getZipCode() }}, {{ customer.country }}</p>
         <h2>Devis</h2>
         <br>
-        {% if customer.getQuotations() %}
-            {% include '_partials/_quotation.index.html.twig' with {'quotations': customer.getQuotations()}%}
+        {% if quotations %}
+            {% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%}
         {% endif %}
         <br>
         <a href="{{ path('back_customer_update', {'id': customer.id}) }}" class="btn btn-primary">Modifier</a>
