--- a/templates/quotation/show.html.twig
+++ b/templates/quotation/show.html.twig
@@ -1,59 +1,150 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quotation
-{% endblock %}
+{% block title %}Détails de la citation{% endblock %}
 
 {% block body %}
-	<h1>Quotation</h1>
+    <h1>Détails du devis</h1>
 
-	<table class="table">
-		<tbody>
-			<tr>
-				<th>Id</th>
+    <table class="table">
+        <thead>
+                <th>Id</th>
+                <th>Description</th>
+                <th>Montant HT</th>
+                <th>Montant TTC</th>
+                <th>Statut</th>
+                <th>Date</th>
+                <th>Date d'échéance</th>
+                <th>Date de création</th>
+                <th>Services</th>
+        </thead>
+        <tbody>
+            <tr>
 				<td>{{ quotation.id }}</td>
-			</tr>
-			<tr>
-				<th>Description</th>
 				<td>{{ quotation.description }}</td>
-			</tr>
-			<tr>
-				<th>Amount_ht</th>
 				<td>{{ quotation.amountHt }}</td>
-			</tr>
-			<tr>
-				<th>Amount_ttc</th>
 				<td>{{ quotation.amountTtc }}</td>
-			</tr>
-
-			<tr>
-				<th>Status</th>
 				<td>{{ quotation.status }}</td>
-			</tr>
-			<tr>
-				<th>Date</th>
 				<td>{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
-			</tr>
-			<tr>
-				<th>Due_date</th>
 				<td>{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
-			</tr>
-			<tr>
-				<th>Created</th>
 				<td>{{ quotation.createdAt ? quotation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-			</tr>
+                <td>
+                    {% if quotation.services is not empty %}
+                        <ul>
+                            {% for service in quotation.services %}
+                                <li>{{ service.label }} - Prix: {{ service.price }} - Quantité: {{ service.quantity }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        Aucun service
+                    {% endif %}
+                </td>
+        </tbody>
+    </table>
+	</br>
 
-			<tr>
-				<th>Services</th>
-				{% if quotation.services %}
-					{% for service in quotation.services %}
-						<td>{{ service.label }}</td>
-						<td>{{ service.price }}</td>
-						<td>{{ service.quantity }}</td>
-
+	{% if previousVersions %}
+		<h2>Version précédentes:</h2>
+			<table class="table">
+				<thead>
+					<th>Id</th>
+					<th>Version</th>
+					<th>Description</th>
+					<th>Montant HT</th>
+					<th>Montant TTC</th>
+					<th>Statut</th>
+					<th>Date</th>
+					<th>Date d'échéance</th>
+					<th>Date de création</th>
+					<th>Services</th>
+					<th>Actions</th>
+				</thead>
+				<tbody>
+					{% for previousVersion in previousVersions %}
+						<tr>
+							<td>{{ previousVersion.id }}</td>
+							<td>{{ previousVersion.version }}</td>
+							<td>{{ previousVersion.description }}</td>
+							<td>{{ previousVersion.amountHt }}</td>
+							<td>{{ previousVersion.amountTtc }}</td>
+							<td>{{ previousVersion.status }}</td>
+							<td>{{ previousVersion.date ? previousVersion.date|date('Y-m-d') : '' }}</td>
+							<td>{{ previousVersion.dueDate ? previousVersion.dueDate|date('Y-m-d') : '' }}</td>
+							<td>{{ previousVersion.createdAt ? previousVersion.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>
+								{% if previousVersion.services is not empty %}
+									<ul>
+										{% for service in previousVersion.services %}
+											<li>{{ service.label }} - Prix: {{ service.price }} - Quantité: {{ service.quantity }}</li>
+										{% endfor %}
+									</ul>
+								{% else %}
+									Aucun service
+								{% endif %}
+							</td>
+							<td>
+								<a href="{{ path('front_quotation_show', {'id': previousVersion.id}) }}">show</a>
+								<a href="{{ path('front_quotation_edit', {'id': previousVersion.id}) }}">edit</a>
+							</td>
+						</tr>
 					{% endfor %}
-				{% endif %}
-			</tr>
-		</tbody>
-	</td>
+				</tbody>
+			</table>
+		</br>
+	{% endif %}
 
-</tr></tbody></table><a href="{{ path('front_quotation_index') }}">back to list</a><a href="{{ path('front_quotation_edit', {'id': quotation.id}) }}">edit</a>{{ include('quotation/_delete_form.html.twig') }}{% endblock %}
+	{% if nextVersions %}
+		<h2>Version suivantes:</h2>
+			<table class="table">
+				<thead>
+					<th>Id</th>
+					<th>Version</th>
+					<th>Description</th>
+					<th>Montant HT</th>
+					<th>Montant TTC</th>
+					<th>Statut</th>
+					<th>Date</th>
+					<th>Date d'échéance</th>
+					<th>Date de création</th>
+					<th>Services</th>
+					<th>Actions</th>
+				</thead>
+				<tbody>
+					{% for nextVersion in nextVersions %}
+						<tr>
+							<td>{{ nextVersion.id }}</td>
+							<td>{{ nextVersion.version }}</td>
+							<td>{{ nextVersion.description }}</td>
+							<td>{{ nextVersion.amountHt }}</td>
+							<td>{{ nextVersion.amountTtc }}</td>
+							<td>{{ nextVersion.status }}</td>
+							<td>{{ nextVersion.date ? nextVersion.date|date('Y-m-d') : '' }}</td>
+							<td>{{ nextVersion.dueDate ? nextVersion.dueDate|date('Y-m-d') : '' }}</td>
+							<td>{{ nextVersion.createdAt ? nextVersion.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>
+								{% if nextVersion.services is not empty %}
+									<ul>
+										{% for service in nextVersion.services %}
+											<li>{{ service.label }} - Prix: {{ service.price }} - Quantité: {{ service.quantity }}</li>
+										{% endfor %}
+									</ul>
+								{% else %}
+									Aucun service
+								{% endif %}
+							</td>
+							<td>
+								<a href="{{ path('front_quotation_show', {'id': nextVersion.id}) }}">show</a>
+								<a href="{{ path('front_quotation_edit', {'id': nextVersion.id}) }}">edit</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</br>
+	{% endif %}
+
+    <a href="{{ path('front_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a>
+	</br>
+    <a href="{{ path('front_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
+	</br>
+    {{ include('quotation/_delete_form.html.twig') }}
+{% endblock %}
