calcul work on both quotation and invoice - crud invoice almost done

--- a/templates/invoice/_form.html.twig
+++ b/templates/invoice/_form.html.twig
@@ -6,7 +6,8 @@
 </div>
 
 <div class='status'>
-	{{form_row(form.status)}}
+	{{ form_row(form.status is defined ? form.status : form.isPaid) }}
+
 </div>
 
 <div class='date'>
