--- a/templates/_partials/_quotation.index.html.twig
+++ b/templates/_partials/_quotation.index.html.twig
@@ -1,35 +1,43 @@
 <table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Amount_ht</th>
-            <th>Amount_ttc</th>
-            <th>Status</th>
-            <th>Date</th>
-            <th>Due_date</th>
-            <th>Created</th>
-            <th>Services</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for quotation in quotations %}
-            <tr>
-                <td>{{ quotation.id }}</td>
-                <td>{{ quotation.description }}</td>
-                <td>{{ quotation.amountHt }}</td>
-                <td>{{ quotation.amountTtc }}</td>
-                <td>{{ quotation.status }}</td>
-                <td>{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
-                <td>{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
-                <td>{{ quotation.createdAt ? quotation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ quotation.services|length }}</td>
-                <td>
-                    <a href="{{ path('front_quotation_show', {'id': quotation.id}) }}">show</a>
-                    <a href="{{ path('front_quotation_edit', {'id': quotation.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Description</th>
+			<th>Amount_ht</th>
+			<th>Amount_ttc</th>
+			<th>Status</th>
+			<th>Date</th>
+			<th>Due_date</th>
+			<th>Created</th>
+			<th>Services</th>
+			<th>Vat_rate_10</th>
+			<th>Vat_rate_20</th>
+			<th>Owner</th>
+			<th>Company</th>
+			<th>Actions</th>
+		</tr>
+	</thead>
+	<tbody>
+		{% for quotation in quotations %}
+			<tr>
+				<td>{{ quotation.id }}</td>
+				<td>{{ quotation.description }}</td>
+				<td>{{ quotation.amountHt }}</td>
+				<td>{{ quotation.amountTtc }}</td>
+				<td>{{ quotation.status }}</td>
+				<td>{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+				<td>{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+				<td>{{ quotation.createdAt ? quotation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+				<td>{{ quotation.services|length }}</td>
+				<td>{{quotation.vatRate10}}</td>
+				<td>{{quotation.vatRate20}}</td>
+				<td>{{ quotation.owner.email }}</td>
+				<td>{{ quotation.company.name }}</td>
+				<td>
+					<a href="{{ path('front_quotation_show', {'id': quotation.id}) }}">show</a>
+					<a href="{{ path('front_quotation_edit', {'id': quotation.id}) }}">edit</a>
+				</td>
+			</tr>
+		{% endfor %}
+	</tbody>
 </table>
