--- a/templates/quotation/new.html.twig
+++ b/templates/quotation/new.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Quotation{% endblock %}
+{% block title %}New Quotation
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Quotation</h1>
+	<h1>Create new Quotation</h1>
 
-    {{ include('quotation/_form.html.twig') }}
+	{{ include('quotation/_form.html.twig') }}
 
-    <a href="{{ path('front_quotation_index') }}">back to list</a>
+	<a href="{{ path('front_quotation_index') }}">back to list</a>
 {% endblock %}
