--- a/templates/registration/company_user_register.html.twig
+++ b/templates/registration/company_user_register.html.twig
@@ -1,18 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block title %}Inscription d'un nouvel utilisateur{% endblock %}
 
 {% block body %}
 <section class="container">
-    <h1>Inscription</h1>
+    <h1>Inscription d'un nouvel utilisateur</h1>
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.companyName) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.firstname) }}
         {{ form_row(registrationForm.lastname) }}
-        {{ form_row(registrationForm.RGPDConsent) }}
         {{ form_row(registrationForm.plainPassword, {'label': 'Mot de passe'}) }}
-        <button type="submit" class="btn btn-primary">S'inscrire</button>
+        <button type="submit" class="btn btn-primary">Enregistrer l'utilisateur</button>
     {{ form_end(registrationForm) }}
 </section>
 {% endblock %}
