--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ArtBill - Tableau de bord{% endblock %}
+{% block page_title %}Tableau de bord - ArtBill{% endblock %}
 
-{% block body %}{% endblock %}
+{% block content_header %}
+    <p class="text-2xl font-bold">Bienvenue</p>
+{% endblock %}
+
+{% block content_box %}
+    <p>Test</p>
+{% endblock %}
