--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,18 +1,37 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_blank.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block page_title %}Inscription{% endblock %}
 
 {% block body %}
-<section class="container">
-    <h1>Inscription</h1>
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.companyName) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.firstname) }}
-        {{ form_row(registrationForm.lastname) }}
-        {{ form_row(registrationForm.RGPDConsent) }}
-        {{ form_row(registrationForm.plainPassword, {'label': 'Mot de passe'}) }}
-        <button type="submit" class="btn btn-primary">S'inscrire</button>
+    <section class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Inscription</h1>
+
+                {{ form_errors(registrationForm) }}
+
+                {{ form_start(registrationForm) }}
+                    <fieldset>
+                            <legend>Ma Compagnie</legend>
+                            {{ form_row(registrationForm.companyName) }}
+                    </legend>
+                    <fieldset>
+                        <legend>Mon identité</legend>
+                        {{ form_row(registrationForm.email) }}
+                        {{ form_row(registrationForm.firstname) }}
+                        {{ form_row(registrationForm.lastname) }}
+
+                        {{ form_row(registrationForm.plainPassword, {
+                            label: 'Password'
+                            }) 
+                        }}
+                    </fieldset>
+                    {{ form_row(registrationForm.RGPDConsent) }}
+
+                <button type="submit" class="btn">Register</button>
+            </div>
+        </div>
+    </section>
     {{ form_end(registrationForm) }}
 </section>
 {% endblock %}
