rebase + fix templates

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,12 +1,8 @@
-{% extends 'base_blank.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block page_title %}Connexion{% endblock %}
 
-<<<<<<< HEAD
 {% block page_content %}
-=======
-{% block content_box %}
->>>>>>> 33ecc39 (full tailwind system)
 <section class="container my-3">
     <div class="row">
         <div class="col">
