rebase + fix templates

--- a/templates/_composants/_card.html.twig
+++ b/templates/_composants/_card.html.twig
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-title">{% block title %}{% endblock %}</div>
     <div class="card-body">
-        {% block body %}{% endblock %}
+        {% block page_content %}{% endblock %}
     </div>
 </div>
