--- a/templates/back/post/update.html.twig
+++ b/templates/back/post/update.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Modification de l'y {{ post.content|slice(0, 10) }}[..]{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Modification de l'y {{ post.content|slice(0, 10) }}[..]</h1>
 
     {{ form_start(form) }}
