--- a/templates/back/reply/edit.html.twig
+++ b/templates/back/reply/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Reply{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Edit Reply</h1>
 
     {{ include('reply/_form.html.twig', {'button_label': 'Update'}) }}
