--- a/templates/back/service/edit.html.twig
+++ b/templates/back/service/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Service{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Edit Service</h1>
 
     {{ include('service/_form.html.twig', {'button_label': 'Update'}) }}
