--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Page non trouvée{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <main class="container">
         <section class="row">
             <div class="col-12">
