--- a/templates/back/category/index.html.twig
+++ b/templates/back/category/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Category index{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Category index</h1>
 
     <table class="table">
