--- a/templates/back/post/new.html.twig
+++ b/templates/back/post/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Création d'un y{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Création d'un y</h1>
 
     {{ form_start(form) }}
