--- a/templates/back/reply/new.html.twig
+++ b/templates/back/reply/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Reply{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Create new Reply</h1>
 
     {{ include('reply/_form.html.twig') }}
