--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
                             </div>
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="/admin/customer/">
                         <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
                             <div class="flex items-center gap-2">
                                 <icon name="users"></icon>
@@ -82,7 +82,7 @@
             <div id="content-header" class="w-full flex justify-between items-center">
                 {% block page_header %}<p class="text-2xl font-bold">Bienvenue</p>{% endblock %}
             </div>
-            <div id="content-box" class="w-full h-full flex flex-col border shadow-md rounded-lg overflow-hidden">
+            <div id="content-box" class="w-full h-full flex flex-col border shadow-md rounded-lg overflow-y-auto max-h-300">
                 {% block page_content %}{% endblock %}
             </div>
 
