--- a/templates/customer/new.html.twig
+++ b/templates/customer/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Création d'un client{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <div class="container mx-auto my-8">
         <h1 class="text-4xl font-bold mb-6">Création d'un client</h1>
 
