--- a/templates/customer/show.html.twig
+++ b/templates/customer/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Client {{ customer.name }}{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <div class="container mx-auto my-8">
         <h1 class="text-4xl font-bold mb-6">Client {{ customer.name }}</h1>
 
