--- a/templates/front/category/show.html.twig
+++ b/templates/front/category/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Category{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Category</h1>
 
     <table class="table">
