--- a/templates/front/post/index.html.twig
+++ b/templates/front/post/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Liste des y{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Liste des y</h1>
 
     {% for post in posts %}
@@ -10,7 +10,7 @@
             {% block title %}
                 <h2>{{ post.content }}</h2>
             {% endblock %}
-            {% block body %}
+            {% block page_content %}
                 <em>Créé le {{ post.createdAt|date('d/m/y à H:i') }}</em> <br>
                 <a href="{{ path('front_post_show', {'id': post.id}) }}">Voir</a> <br>
             {% endblock %}
