--- a/templates/front/post/show.html.twig
+++ b/templates/front/post/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Liste des y{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Liste des y</h1>
 
     {{ post.content }} -
