--- a/templates/front/reply/index.html.twig
+++ b/templates/front/reply/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Reply index{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Reply index</h1>
 
     <table class="table">
