--- a/templates/front/reply/show.html.twig
+++ b/templates/front/reply/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Reply{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Reply</h1>
 
     <table class="table">
