--- a/templates/front/service/show.html.twig
+++ b/templates/front/service/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Service{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Service</h1>
 
     <table class="table">
