--- a/templates/quotation/index.html.twig
+++ b/templates/quotation/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Quotation index
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Quotation index</h1>
 	{% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%}
 	<a href="{{ path('front_quotation_new') }}">Create new</a>
