--- a/templates/registration/company_user_register.html.twig
+++ b/templates/registration/company_user_register.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Inscription d'un nouvel utilisateur{% endblock %}
 
-{% block body %}
+{% block page_content %}
 <section class="container">
     <h1>Inscription d'un nouvel utilisateur</h1>
     {{ form_start(registrationForm) }}
