--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_title %}Inscription{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <section class="container">
         <div class="row">
             <div class="col">
