--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base_blank.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block page_title %}Connexion{% endblock %}
 
-{% block content_box %}
+{% block page_content %}
 <section class="container my-3">
     <div class="row">
         <div class="col">
