--- a/templates/security/reset_password_request.html.twig
+++ b/templates/security/reset_password_request.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Réinitialisation de mot de passe{% endblock %}
 
-{% block body %}
+{% block page_content %}
 <section class="container my-3">
     <div class="row">
         <div class="col">
