--- a/templates/user/quotation/edit.html.twig
+++ b/templates/user/quotation/edit.html.twig
@@ -5,9 +5,9 @@
 {% block page_content %}
     <h1>Edit Quotation</h1>
 
-    {{ include('quotation/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/quotation/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a class='block h-8' href="{{ path('front_quotation_index') }}">Retour aux devis</a>
+    <a class='block h-8' href="{{ path('user_quotation_index') }}">Retour aux devis</a>
 
-    {{ include('quotation/_delete_form.html.twig') }}
+    {{ include('user/quotation/_delete_form.html.twig') }}
 {% endblock %}
