--- a/templates/admin/invoice/show.html.twig
+++ b/templates/admin/invoice/show.html.twig
@@ -75,7 +75,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<a href="{{ path('back_invoice_index') }}">back to list</a>
-	<a href="{{ path('back_invoice_edit', {'id': invoice.id}) }}">edit</a>
-	{{ include('invoice/_delete_form.html.twig') }}
+	<a href="{{ path('admin_invoice_index') }}">back to list</a>
+	<a href="{{ path('admin_invoice_edit', {'id': invoice.id}) }}">edit</a>
+	{{ include('admin/invoice/_delete_form.html.twig') }}
 {% endblock %}
