--- a/templates/user/category/edit.html.twig
+++ b/templates/user/category/edit.html.twig
@@ -5,9 +5,9 @@
 {% block page_content %}
     <h1>Edit Category</h1>
 
-    {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/category/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_app_category_index') }}">back to list</a>
+    <a href="{{ path('user_app_category_index') }}">back to list</a>
 
-    {{ include('category/_delete_form.html.twig') }}
+    {{ include('user/category/_delete_form.html.twig') }}
 {% endblock %}
