--- a/templates/user/category/index.html.twig
+++ b/templates/user/category/index.html.twig
@@ -21,8 +21,8 @@
                 <td>{{ category.label }}</td>
                 <td>{{ category.created ? category.created|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('back_app_category_show', {'id': category.id}) }}">show</a>
-                    <a href="{{ path('back_app_category_edit', {'id': category.id}) }}">edit</a>
+                    <a href="{{ path('user_app_category_show', {'id': category.id}) }}">show</a>
+                    <a href="{{ path('user_app_category_edit', {'id': category.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_category_new') }}">Create new</a>
+    <a href="{{ path('user_category_new') }}">Create new</a>
 {% endblock %}
