--- a/templates/user/category/new.html.twig
+++ b/templates/user/category/new.html.twig
@@ -5,7 +5,7 @@
 {% block page_content %}
     <h1>Create new Category</h1>
 
-    {{ include('category/_form.html.twig') }}
+    {{ include('user/category/_form.html.twig') }}
 
-    <a href="{{ path('back_app_category_index') }}">back to list</a>
+    <a href="{{ path('user_app_category_index') }}">back to list</a>
 {% endblock %}
