--- a/templates/user/category/show.html.twig
+++ b/templates/user/category/show.html.twig
@@ -22,9 +22,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_app_category_index') }}">back to list</a>
+    <a href="{{ path('user_app_category_index') }}">back to list</a>
 
-    <a href="{{ path('back_app_category_edit', {'id': category.id}) }}">edit</a>
+    <a href="{{ path('user_app_category_edit', {'id': category.id}) }}">edit</a>
 
-    {{ include('category/_delete_form.html.twig') }}
+    {{ include('user/category/_delete_form.html.twig') }}
 {% endblock %}
