--- a/templates/user/customer/index.html.twig
+++ b/templates/user/customer/index.html.twig
@@ -22,10 +22,10 @@
                             <td class="py-4 px-6 border-b">{{ customer.name }}</td>
                             <td class="py-4 px-6 border-b">{{ customer.email }}</td>
                             <td class="py-4 px-6 border-b">
-                                <a href="{{ path('customer_update', {'id': customer.id}) }}" class="text-blue-500 hover:underline">Modifier</a>
+                                <a href="{{ path('user_customer_update', {'id': customer.id}) }}" class="text-blue-500 hover:underline">Modifier</a>
                             </td>
                             <td class="py-4 px-6 border-b">
-                                <a href="{{ path('customer_delete', {'id': customer.id, 'token': csrf_token('delete' ~ customer.id)}) }}" class="text-red-500 hover:underline" onclick="return confirm('Êtes-vous sûrs de vouloir supprimer le client {{ customer.name }} ?');">Suppression</a>
+                                <a href="{{ path('user_customer_delete', {'id': customer.id, 'token': csrf_token('delete' ~ customer.id)}) }}" class="text-red-500 hover:underline" onclick="return confirm('Êtes-vous sûrs de vouloir supprimer le client {{ customer.name }} ?');">Suppression</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -35,6 +35,6 @@
             <p class="mt-6 text-gray-600">Aucun client</p>
         {% endif %}
 
-        <a href="{{ path('customer_new') }}" class="mt-8 inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700">Ajouter un client</a>
+        <a href="{{ path('user_customer_new') }}" class="mt-8 inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700">Ajouter un client</a>
     </div>
 {% endblock %}
