--- a/templates/user/quotation/new.html.twig
+++ b/templates/user/quotation/new.html.twig
@@ -6,7 +6,7 @@
 {% block page_content %}
 	<h1>Create new Quotation</h1>
 
-	{{ include('quotation/_form.html.twig') }}
+	{{ include('user/quotation/_form.html.twig') }}
 
-	<a href="{{ path('front_quotation_index') }}">back to list</a>
+	<a href="{{ path('user_quotation_index') }}">back to list</a>
 {% endblock %}
