--- a/templates/user/service/edit.html.twig
+++ b/templates/user/service/edit.html.twig
@@ -5,9 +5,9 @@
 {% block page_content %}
     <h1>Edit Service</h1>
 
-    {{ include('service/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/service/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_app_service_index') }}">back to list</a>
+    <a href="{{ path('user_app_service_index') }}">back to list</a>
 
-    {{ include('service/_delete_form.html.twig') }}
+    {{ include('user/service/_delete_form.html.twig') }}
 {% endblock %}
