--- a/templates/user/service/new.html.twig
+++ b/templates/user/service/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'back/default/form.html.twig' %}
+{% extends 'user/default/form.html.twig' %}
 
 {% block page_title %}Ajouter une prestation - ArtBill{% endblock %}
 {% block page_header %}
