--- a/templates/admin/category/edit.html.twig
+++ b/templates/admin/category/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Category{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Edit Category</h1>
 
     {{ include('admin/category/_form.html.twig', {'button_label': 'Update'}) }}
