--- a/templates/admin/quotation/show.html.twig
+++ b/templates/admin/quotation/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Quotation
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Quotation</h1>
 
 	<table class="table">
