--- a/templates/superadmin/quotation/show.html.twig
+++ b/templates/superadmin/quotation/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Détails de la citation
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 <h1>Détails du devis</h1>
 <table class="table">
 	<thead>
