--- a/templates/admin/category/new.html.twig
+++ b/templates/admin/category/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Category{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Create new Category</h1>
 
     {{ include('admin/category/_form.html.twig') }}
