--- a/templates/admin/invoice/edit.html.twig
+++ b/templates/admin/invoice/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit invoice
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Edit Invoice</h1>
 
 	{{ include('admin/invoice/_form.html.twig', {'button_label': 'Update'}) }}
