--- a/templates/admin/invoice/new.html.twig
+++ b/templates/admin/invoice/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Invoice
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Create new Invoice</h1>
 
 	{{ include('admin/invoice/_form.html.twig') }}
