--- a/templates/admin/quotation/edit.html.twig
+++ b/templates/admin/quotation/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Quotation{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Edit Quotation</h1>
 
     {{ include('admin/quotation/_form.html.twig', {'button_label': 'Update'}) }}
