--- a/templates/admin/quotation/new.html.twig
+++ b/templates/admin/quotation/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Quotation{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Create new Quotation</h1>
 
     {{ include('admin/quotation/_form.html.twig') }}
