--- a/templates/superadmin/invoice/index.html.twig
+++ b/templates/superadmin/invoice/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Invoices
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Invoices index</h1>
 
 	<table class="table">
