--- a/templates/superadmin/quotation/index.html.twig
+++ b/templates/superadmin/quotation/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Quotation index
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Quotation index</h1>
 	{# a changer suivant le role de l'utilisateur #}
 	{% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%} 
