--- a/templates/superadmin/quotation/new.html.twig
+++ b/templates/superadmin/quotation/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Quotation
 {% endblock %}
 
-{% block body %}
+{% block page_content %}
 	<h1>Create new Quotation</h1>
 
 	{{ include('superadmin/quotation/_form.html.twig') }}
