--- a/templates/superadmin/service/index.html.twig
+++ b/templates/superadmin/service/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Service index{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Service index</h1>
 
     <table class="table">
