--- a/templates/superadmin/service/new.html.twig
+++ b/templates/superadmin/service/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Service{% endblock %}
 
-{% block body %}
+{% block page_content %}
     <h1>Create new Service</h1>
 
     {{ include('superadmin/service/_form.html.twig') }}
